# primesum

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README.md  appveyor.yml  build.sh  configure.ac
doc/: alpha-tuning-factor.nb
include/: BinaryIndexedTree.hpp  BitSieve.hpp  FactorTable.hpp  OmpLock.hpp  PhiTiny.hpp  PiTable.hpp  S1.hpp  S2.hpp  S2LoadBalancer.hpp  S2Status.hpp  SumBits.hpp  Wheel.hpp  aligned_vector.hpp  bit_scan_forward.hpp  fast_div.hpp  generate.hpp  imath.hpp  int128.hpp  int128_t.hpp  int256_t.hpp  isqrt.hpp  min_max.hpp  pmath.hpp  popcnt.hpp  popcount.hpp  primesum-internal.hpp  primesum.hpp  print.hpp  tos_counters.hpp  tos_sums.hpp
m4/: m4-ax_popcnt.m4
scripts/: find_fastest_alpha.sh  worktodo.sh
src/: BitSieve.cpp  FactorTable.cpp  P2.cpp  PhiTiny.cpp  PiTable.cpp  S1.cpp  S2LoadBalancer.cpp  S2Status.cpp  Wheel.cpp  generate.cpp  nth_prime.cpp  phi.cpp  phi_sum.cpp  pi_legendre.cpp  pi_primesieve.cpp  primesum.cpp  print.cpp  test.cpp
src/app/: cmdoptions.cpp  cmdoptions.hpp  help.cpp  main.cpp
src/deleglise-rivat/: S2_easy.cpp  S2_easy_libdivide.cpp  S2_hard.cpp  S2_trivial.cpp  pi_deleglise_rivat_parallel1.cpp  pi_deleglise_rivat_parallel3.cpp
src/lmo/: pi_lmo1.cpp  pi_lmo2.cpp  pi_lmo3.cpp  pi_lmo4.cpp  pi_lmo5.cpp  pi_lmo_parallel1.cpp  pi_lmo_parallel2.cpp
test/: division_256-bit.cpp  modulo_256-bit.cpp
